--- a/src/CG.Blazor.Forms/CG.Blazor.Forms.csproj
+++ b/src/CG.Blazor.Forms/CG.Blazor.Forms.csproj
@@ -17,7 +17,7 @@ Platforms supported:
     <RepositoryType>GIT</RepositoryType>
     <PackageIcon>packageDefaultIcon-50x50.png</PackageIcon>
     <PackageIconUrl />
-    <PackageTags>forms, code generator, mudblazor, CG.Blazor.Forms, CodeGator</PackageTags>
+    <PackageTags>forms, code generator, CG.Blazor.Forms, CodeGator</PackageTags>
   </PropertyGroup>
 
   
